--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/it-equipment-db
+spring.application.name=IT-support-App
+spring.datasource.url=jdbc:mysql://localhost:3306/it_equipment_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
-
+spring.datasource.password=
+spring.jpa.database=MYSQL
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+logging.level.org.springframework.security=DEBUG
+server.port=8080
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+# Uncomment if you have schema.sql or data.sql files
+# spring.sql.init.platform=mysql
